docs: add work examples to cv.md

--- a/src/blocks/blocks.scss
+++ b/src/blocks/blocks.scss
@@ -4,6 +4,7 @@
 @import './summary/summary.scss';
 @import './skills/skills.scss';
 @import './code/code.scss';
+@import './examples/examples.scss';
 @import './work/work.scss';
 @import './education/education.scss';
 @import './languages/languages.scss';
