--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,3 +1,4 @@
 @import './nav/nav.scss';
 @import './wrapper/wrapper.scss';
-@import './personal//personal.scss';
+@import './personal/personal.scss';
+@import './example/example.scss';
