--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -11,6 +11,7 @@ block content
         include ../../blocks/summary/summary
         include ../../blocks/skills/skills
         include ../../blocks/code/code
+        include ../../blocks/examples/examples
         include ../../blocks/work/work
         include ../../blocks/education/education
         include ../../blocks/languages/languages
