feat: add anchor links

--- a/src/blocks/code/code.pug
+++ b/src/blocks/code/code.pug
@@ -1,4 +1,4 @@
-section.code
+section.code#code
   .wrapper.code__wrapper
     h2.title-h2.code__title <span class="color--orange">Code</span> example:
     .container
