--- a/src/blocks/contacts/contacts.pug
+++ b/src/blocks/contacts/contacts.pug
@@ -1,4 +1,4 @@
-section.contacts
+section.contacts#contacts
   .contacts__wrapper
     .contacts__avatar
       include ../../elements/avatar/avatar
