--- a/src/blocks/education/education.pug
+++ b/src/blocks/education/education.pug
@@ -1,4 +1,4 @@
-section.education
+section.education#education
   .wrapper.education__wrapper
     h2.title-h2.code__title Education <span class="color--orange">and</span> courses:
     .container
