--- a/src/blocks/summary/summary.pug
+++ b/src/blocks/summary/summary.pug
@@ -1,4 +1,4 @@
-section.summary
+section.summary#summary
   .wrapper.summary__wrapper
     h2.title-h2.summary__title A bit <span class="color--orange">about</span> Myself:
     .container
