--- a/src/blocks/work/work.pug
+++ b/src/blocks/work/work.pug
@@ -1,6 +1,6 @@
-section.work
+section.work#experience
   .wrapper.work__wrapper
-    h2.title-h2.work__title Work <span class="color--orange">experience</span>:
+    h2.title-h2.work__title <span class="color--orange">Work</span> experience:
     .container
       ul.work__list
         li.work__item 2007 - 2012 - Worked in technical support for Windows users
