--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -1,14 +1,18 @@
 nav.nav
   ul.nav__list
     li.nav__item
-      a.nav__link(href="#") Contacts
+      a.nav__link(href="#contacts") Contacts
     li.nav__item
-      a.nav__link(href="#") Summary
+      a.nav__link(href="#summary") Summary
     li.nav__item
-      a.nav__link(href="#") Skills
+      a.nav__link(href="#skills") Skills
     li.nav__item
-      a.nav__link(href="#") Code
+      a.nav__link(href="#code") Code
     li.nav__item
-      a.nav__link(href="#") Courses
+      a.nav__link(href="#works") Works
     li.nav__item
-      a.nav__link(href="#") Education
+      a.nav__link(href="#experience") Experience
+    li.nav__item
+      a.nav__link(href="#education") Education
+    li.nav__item
+      a.nav__link(href="#languages") Languages
