--- a/src/blocks/examples/examples.pug
+++ b/src/blocks/examples/examples.pug
@@ -1,6 +1,6 @@
-section.examples
+section.examples#works
   .wrapper.examples__wrapper
-
+    h2.title-h2.code__title Work <span class="color--orange">examples</span>:
     .examples__container
 
       +example({
