--- a/src/blocks/languages/languages.pug
+++ b/src/blocks/languages/languages.pug
@@ -1,4 +1,4 @@
-section.languages
+section.languages#languages
   .wrapper.languages__wrapper
     h2.title-h2.languages__title Languages
     .container
