--- a/src/blocks/skills/skills.pug
+++ b/src/blocks/skills/skills.pug
@@ -1,4 +1,4 @@
-section.skills
+section.skills#skills
   .wrapper.skills__wrapper
     h2.title-h2.skills__title My <span class="color--orange">skills</span> and technologies:
     .container
