--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -16,6 +16,7 @@ block content
         include ../../blocks/education/education
         include ../../blocks/languages/languages
     include ../../blocks/footer/footer
+    include ../../elements/top-link/top-link
 
 
 
