--- a/src/blocks/examples/examples.scss
+++ b/src/blocks/examples/examples.scss
@@ -1,7 +1,7 @@
 .examples {
-}
-
-.examples__wrapper {
+  display: flex;
+  justify-content: center;
+  padding-top: 2.8125rem;
 }
 
 @include media-tablet-wide {
