fix: update avatat url

--- a/src/elements/avatar/avatar.pug
+++ b/src/elements/avatar/avatar.pug
@@ -1,2 +1,2 @@
 .avatar
-  img.avatar__image(src="/images/avatar.jpeg" alt="My foto")
+  img.avatar__image(src="./images/avatar.jpeg" alt="My foto")
