fix: update preview url

--- a/src/components/example/example.pug
+++ b/src/components/example/example.pug
@@ -2,6 +2,6 @@ mixin example(props)
   a(href=props.link target="_blank").example
     .example__wrapper
       picture
-        source(srcset="/images/" + props.img + ".webp" type="image/webp")
-        source(srcset="/images/" + props.img + ".jpg" type="image/jpg")
+        source(srcset="./images/" + props.img + ".webp" type="image/webp")
+        source(srcset="./images/" + props.img + ".jpg" type="image/jpg")
         img.example__preview(src="" alt="work example preview")
