fix: update linkedin url

--- a/src/components/personal/personal.pug
+++ b/src/components/personal/personal.pug
@@ -5,6 +5,6 @@
     a(href="https://github.com/ShkredovDmitriy" target="_blank").personal__link
       svg.icon
         use(href="#icon-github")
-    a(href="https://github.com/ShkredovDmitriy" target="_blank").personal__link
+    a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").personal__link
       svg.icon
         use(href="#icon-linkedin")
