--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,7 +4,7 @@ include ../components/example/example
 block variables
 
 doctype html
-html(lang="ru-RU")
+html(lang="en")
   head
     meta(charset="utf-8")
     title #{title}
