fix: add default url images

--- a/src/components/example/example.pug
+++ b/src/components/example/example.pug
@@ -4,4 +4,4 @@ mixin example(props)
       picture
         source(srcset="./images/" + props.img + ".webp" type="image/webp")
         source(srcset="./images/" + props.img + ".jpg" type="image/jpg")
-        img.example__preview(src="" alt="work example preview")
+        img.example__preview(src="./images/" + props.img + ".jpg" alt="work example preview")
