feat: add email link

--- a/src/components/personal/personal.scss
+++ b/src/components/personal/personal.scss
@@ -31,7 +31,7 @@
   margin-right: 0.5rem;
 }
 
-@include media-desktop {
+@include media-notebook {
   .personal__link {
     transition: fill 0.3s;
 
