--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -1,12 +1,15 @@
 footer.footer
   .footer__wrapper
     .footer__left-part
-      a(href="https://github.com/ShkredovDmitriy" target="_blank").footer__github-link
+      a(href="https://github.com/ShkredovDmitriy" target="_blank").footer__link
         svg.icon
           use(href="#icon-github")
-      a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").footer__linkedin-link
+      a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").footer__link
         svg.icon
           use(href="#icon-linkedin")
+      a(href="mailto:shkredovdmitriy@gmail.com" target="_blank").footer__link
+        svg.icon
+          use(href="#icon-email")
     .footer__center-part
       .footer__foundation 2022
     .footer__right-part
