--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -35,16 +35,15 @@
   color: $color-white;
 }
 
-.footer__github-link,
-.footer__linkedin-link {
+.footer__link {
   display: block;
   width: 2.625rem;
   height: 2.625rem;
   fill: $color-white;
-}
 
-.footer__linkedin-link {
-  margin-left: 0.625rem;
+  &:nth-child(n + 2) {
+    margin-left: 0.25rem;
+  }
 }
 
 .footer__rs-link {
@@ -56,14 +55,19 @@
   stroke: $color-white;
 }
 
-@include media-desktop {
-  .footer__github-link,
-  .footer__linkedin-link,
+@include media-notebook {
+  .footer__link,
   .footer__rs-link {
     transition: fill 0.3s;
 
     &:hover {
       fill: $color-orange;
+    }
+  }
+
+  .footer__link {
+    &:nth-child(n + 2) {
+      margin-left: 0.625rem;
     }
   }
 }
