--- a/src/components/personal/personal.pug
+++ b/src/components/personal/personal.pug
@@ -8,3 +8,6 @@
     a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").personal__link
       svg.icon
         use(href="#icon-linkedin")
+    a(href="mailto:shkredovdmitriy@gmail.com" target="_blank").personal__link
+      svg.icon
+        use(href="#icon-email")
