--- a/src/blocks/languages/languages.pug
+++ b/src/blocks/languages/languages.pug
@@ -1,6 +1,6 @@
 section.languages#languages
   .wrapper.languages__wrapper
-    h2.title-h2.languages__title Languages
+    h2.title-h2.languages__title Languages:
     .container
       ul.work__list
         li.work__item Ukrainian - native speaker
