--- a/src/blocks/code/code.pug
+++ b/src/blocks/code/code.pug
@@ -2,20 +2,15 @@ section.code#code
   .wrapper.code__wrapper
     h2.title-h2.code__title <span class="color--orange">Code</span> example:
     .container
-      p.text Task from Codewars: сalculate the factorial with do while
+      p.text Task from Codewars: The Supermarket Queue, <a href="https://www.codewars.com/kata/57b06f90e298a7b53d000a86/solutions/javascript" target="_blank">link to codewars</a>
       pre.code__example.
-        let number = prompt("Enter number");
-        let factorial = 1;
-        do {
-            if (counter == 0) {
-                factorial = 1;
-                break;
-            }
-            factorial = factorial * counter;
-            counter = counter - 1;
+        function queueTime(customers, n) {
+          return Math.max(...customers.reduce((acc, time) => {
+            const index = acc.indexOf(Math.min(...acc));
+            acc[index] += time;
+            return acc;
+          }, new Array(n).fill(0)));
         }
-        while (counter > 0);
-        document.write(factorial);
 
 
 
