--- a/src/elements/text/text.scss
+++ b/src/elements/text/text.scss
@@ -1,6 +1,12 @@
 .text {
   font-size: 1rem;
   color: $color-grey;
+
+  a {
+    color: $color-grey;
+    text-decoration: underline;
+    color: $color-orange;
+  }
 }
 
 .color--orange {
