feat: add discord link to my personal data

--- a/src/components/personal/personal.pug
+++ b/src/components/personal/personal.pug
@@ -1,13 +1,20 @@
 .personal
   h1.title-h1.personal__name Dmitriy <span class="color--orange">Shkredov</span>
   .personal__position Front-End Developer
-  .personal__links
-    a(href="https://github.com/ShkredovDmitriy" target="_blank").personal__link
-      svg.icon
-        use(href="#icon-github")
-    a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").personal__link
-      svg.icon
-        use(href="#icon-linkedin")
-    a(href="mailto:shkredovdmitriy@gmail.com" target="_blank").personal__link
-      svg.icon
-        use(href="#icon-email")
+  ul.personal__link-list
+    li.personal__link-item
+      a(href="https://github.com/ShkredovDmitriy" target="_blank").personal__link
+        svg.icon
+          use(href="#icon-github")
+    li.personal__link-item
+      a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").personal__link
+        svg.icon
+          use(href="#icon-linkedin")
+    li.personal__link-item
+      a(href="mailto:shkredovdmitriy@gmail.com" target="_blank").personal__link
+        svg.icon
+          use(href="#icon-email")
+    li.personal__link-item
+      a(href="https://discord.com/users/902152026203512883" target="_blank").personal__link
+        svg.icon
+          use(href="#icon-discord")
