feat: update my skills

--- a/src/blocks/skills/skills.pug
+++ b/src/blocks/skills/skills.pug
@@ -7,21 +7,23 @@ section.skills#skills
           +progress({exp: "80%"})
         li.skills__item CSS3, Scss
           +progress({exp: "80%"})
-        li.skills__item JS, Jquery, React
-          +progress({exp: "60%"})
-        li.skills__item BEM
-          +progress({exp: "55%"})
-        li.skills__item Git, Github
+        li.skills__item JS, jQuery
+          +progress({exp: "70%"})
+        li.skills__item React
           +progress({exp: "50%"})
+        li.skills__item Vue
+          +progress({exp: "35%"})
         li.skills__item Webpack
           +progress({exp: "65%"})
-        li.skills__item Eslint, Prettier
-          +progress({exp: "80%"})
         li.skills__item VSCode, Sublime
-          +progress({exp: "80%"})
+          +progress({exp: "85%"})
+        li.skills__item Eslint, Prettier
+          +progress({exp: "75%"})
         li.skills__item Docker
           +progress({exp: "40%"})
-        li.skills__item Windows, Linux
-          +progress({exp: "80%"})
         li.skills__item Figma, Photoshop
-          +progress({exp: "40%"})
+          +progress({exp: "45%"})
+        li.skills__item Git, Github
+          +progress({exp: "55%"})
+        li.skills__item Windows, Linux
+          +progress({exp: "75%"})
