feat: update linkedin link

--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -7,7 +7,7 @@ footer.footer
             svg.icon
               use(href="#icon-github")
         li.footer__link-item
-          a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").footer__link
+          a(href="https://www.linkedin.com/in/shkredovdmitry/" target="_blank").footer__link
             svg.icon
               use(href="#icon-linkedin")
         li.footer__link-item
