--- a/src/components/personal/personal.pug
+++ b/src/components/personal/personal.pug
@@ -7,7 +7,7 @@
         svg.icon
           use(href="#icon-github")
     li.personal__link-item
-      a(href="https://www.linkedin.com/in/dmitriy-shkredov-58467221a" target="_blank").personal__link
+      a(href="https://www.linkedin.com/in/shkredovdmitry/" target="_blank").personal__link
         svg.icon
           use(href="#icon-linkedin")
     li.personal__link-item
